# lua_libxml2

./: .gitignore  CMakeLists.txt  README.md
CMake/Modules/: FindLua.cmake  Findlibxml2.cmake
src/: CMakeLists.txt  runscript.cpp
src/bindings/lua/SWIG/: CMakeLists.txt  generate_wrappers.py
src/bindings/lua/SWIG/wrappers/: lua_libxml2_wrap.c  lua_libxml2_wrap.cxx
test/fixture/: some_document.xml
test/unit/: SWIG_openxml.lua  valgrind.out
