CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(DEFINED CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ELSE()
  SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ENDIF()

INCLUDE (CheckIncludeFileCXX)
INCLUDE (CMakeDependentOption)

PROJECT(lua_libxml2)

LIST(APPEND CMAKE_MODULE_PATH /usr/local/lib/libdakwak ${CMAKE_SOURCE_DIR}/CMake/Modules )

FIND_PACKAGE(libxml2 REQUIRED)
FIND_PACKAGE(Lua 5.1 REQUIRED)

INCLUDE_DIRECTORIES(include ${libxml2_INCLUDE_DIRS} ${Lua_INCLUDE_DIR_51} )

LINK_LIBRARIES( ${libxml2_LIBRARIES} ${Lua_LIBRARIES} )

SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")

ADD_SUBDIRECTORY(src)
